--- a/css/recipeStyle.css
+++ b/css/recipeStyle.css
@@ -5,6 +5,8 @@
     grid-auto-flow: row;
     overflow-y: auto;
     margin-right: 8rem;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
 }
 
 .panel-element{
@@ -18,6 +20,9 @@
 .panel-element:hover{
     transition: ease 0.5s;
     opacity: 100%;
+    box-shadow: 10px 10px 10px -5px rgba(0,0,0,0.5);
+    -webkit-box-shadow: 10px 10px 10px -5px rgba(0,0,0,0.5);
+    -moz-box-shadow: 10px 10px 10px -5px rgba(0,0,0,0.5);
 }
 
 .panel-selected{
@@ -25,6 +30,9 @@
     background: #c9a792;
     border-radius: 6px;
     opacity: 100%;
+    box-shadow: 10px 10px 10px -5px rgba(0,0,0,0.5);
+    -webkit-box-shadow: 10px 10px 10px -5px rgba(0,0,0,0.5);
+    -moz-box-shadow: 10px 10px 10px -5px rgba(0,0,0,0.5);
 }
 
 .text2{
